--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 
 <body>
     <header class=" p-5">
-
+        <div id="acessibilidade" class="menu-acessibilidade"
+            <button id="botao-acessibilidade" class="btn
+            btn-primary fw-bold
+            rotacao-botao">Acessibilidade</button>
+            <div id="opcoes-acessibilidade">
+                
+            </div>
         <nav class="container d-flex justify-content-between align-items-center">
             <img src="img/logo.png" alt="Logotipo da Tropicália" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
